<resources>
    <string name="app_name">تبدیل عدد به حروف</string>
    <string name="numberـhint">عدد مورد نظر را وارد کنید</string>
    <string name="convert_button">تبدیل به حروف</string>
    <string name="copy_button">کپی</string>
    <string name="share_button">اشتراک</string>
    <string name="clear_button">حذف</string>
    <string name="copy_Toast">کپی شد.</string>
    <string name="copy_Error">متنی برای کپی وجود ندارد.</string>
    <string name="share_Toast">متنی برای به اشتراک گزاری وجود ندارد.</string>
    <string name="add_button">اضافه به</string>
    <string name="bigNumberError">عدد بزرگتر از حد مجاز می باشد.</string>
    <string name="numberNullError">لطفا عدد مورد نظر را وارد کنید.</string>
    <string name="setting">تنظیمات</string>
    <string name="about">درباره</string>
    <string name="rial">ریال</string>
    <string name="tomaan">تومان</string>
    <string name="character">حروف</string>

    //Numbers
    <string name="sad">صد</string>
    <string name="hezar">هزار</string>
    <string name="million">میلیون</string>
    <string name="milliard">میلیارد</string>
    <string name="billion">بیلیون</string>
    <string name="version">ورژن ۱.۱</string>
    <string name="fontSize">اندازه قلم</string>
    <string name="saveBtn">ذخیره</string>

    //Formats
    <string name="formats_prompt">واحد</string>
    <string-array name="formats">
        <item>عدد</item>
        <item>تومان</item>
        <item>ریال</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
