<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/fistlin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/numberـhint"
            android:inputType="numberDecimal"
            android:maxLength="23"/>

        <Button
            android:id="@+id/convertBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideInset"
            android:text="@string/convert_button"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@color/colorBtn"
            />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/numberTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character" />

            <android.support.design.widget.TabItem
                android:id="@+id/tomaanTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomaan" />

            <android.support.design.widget.TabItem
                android:id="@+id/rialTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rial" />
        </android.support.design.widget.TabLayout>


            <RelativeLayout
                android:id="@+id/textlayoutfix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    >

                    <TextView
                        android:id="@+id/wordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorDark"
                        android:textSize="24sp"
                        android:paddingBottom="10dp"
                        />

                </ScrollView>
            </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/buttonsline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignBottom="@+id/fistlin"
        >

        <LinearLayout
            android:id="@+id/buttonsLinearLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/copyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorBtn"
                android:drawableStart="@drawable/ic_copy"
                android:padding="5dp"
                android:scrollbarStyle="outsideInset"
                android:text="@string/copy_button"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:drawableStart="@drawable/ic_share"
                android:padding="5dp"
                android:scrollbarStyle="outsideInset"
                android:text="@string/share_button"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:drawableStart="@drawable/ic_clear"
                android:padding="5dp"
                android:scrollbarStyle="outsideInset"
                android:text="@string/clear_button"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"

                />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>